k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agentrag-backend
  namespace: agentrag
spec:
  replicas: 1

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0

  selector:
    matchLabels:
      app: agentrag-backend

  template:
    metadata:
      labels:
        app: agentrag-backend

    spec:
      containers:
        - name: backend
          image: maissamaalej3/agentrag-backend:latest
          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 8080

          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"

            limits:
              cpu: "1"
              memory: "1Gi"
