k8s/python-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agentrag-python
  namespace: agentrag

spec:
  replicas: 1

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0

  selector:
    matchLabels:
      app: agentrag-python

  template:
    metadata:
      labels:
        app: agentrag-python

    spec:
      containers:
        - name: python
          image: maissamaalej3/agentrag-python:latest
          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 8000
              protocol: TCP

          readinessProbe:
            httpGet:
              path: /docs
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /docs
              port: http
            initialDelaySeconds: 40
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3

          # =========================
          # RESOURCES
          # =========================
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"

            limits:
              cpu: "1"
              memory: "2Gi"
