k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: agentrag-mysql
  namespace: agentrag
spec:
  selector:
    app: agentrag-mysql
  ports:
    - name: mysql
      protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
