k8s/python-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: agentrag-python
  namespace: agentrag
spec:
  type: ClusterIP

  selector:
    app: agentrag-python

  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
