k8s/qdrant-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: agentrag-qdrant
  namespace: agentrag
spec:
  type: ClusterIP

  selector:
    app: agentrag-qdrant

  ports:
    - name: http
      protocol: TCP
      port: 6333
      targetPort: 6333

    - name: grpc
      protocol: TCP
      port: 6334
      targetPort: 6334
